# RustLativity

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md
src/: _utils.rs  alg.rs  algebra.rs  frames.rs  lib.rs  math.rs  phy.rs  repositorie.rs  utils.rs
src/alg/: base.rs  position.rs
src/alg/base/: four_vector.rs
src/algebra/: lorentz.rs  quad.rs  vec3.rs
src/math/: matrix.rs  traits.rs  vec3.rs
src/phy/: speed.rs  variables.rs
src/utils/: constants.rs  traits.rs
