[package]
name = "rustlativity"
version = "0.1.0"
authors = ["zazbone <coczaz@gmail.com>"]
edition = "2018"
description = "Rust crate for special relativity computing"
documentation = ""
readme = "README.md"
homepage = ""
repository = "https://github.com/zazbone/RustLativity"
license-file = "gpl-3.0.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
assert_approx_eq = "1.1.0"
